# ai-dev-tools

./: .gitignore  CLAUDE.md  README.md
example_prompts/: build.md  prime.md  proposals.md
presentation_docs/: tracks_spec.md
tracks/elm/: PRESENTER_GUIDE.md  README.md  SETUP.md  elm.json  index.html
tracks/elm/brownfield/: TICKET.md  elm_brownfield.md
tracks/elm/data/: large_dataset.json  sample_results.json
tracks/elm/greenfield/: elm_greenfield.md
tracks/elm/src/: Main.elm  MainBrownfield.elm
tracks/python/: .gitignore  PRESENTER_GUIDE.md  README.md  SETUP.md  requirements.txt  test_deepgram.py
tracks/python/brownfield/: TICKET.md  benchmark_nightmare.py  python_brownfield.md
tracks/python/greenfield/: deepgram_monitor.py  python_greenfield.md
tracks/python/test_data/: ground_truth.json  wer_reference.py
tracks/rust/: PRESENTER_GUIDE.md  README.md  SETUP.md
tracks/rust/audio_processor/: Cargo.toml  README.md
tracks/rust/audio_processor/benches/: buffer_ops.rs
tracks/rust/audio_processor/examples/: generate_test_audio.rs
tracks/rust/audio_processor/src/: lib.rs  unsafe_primitives.rs
tracks/rust/brownfield/: TICKET.md  rust_brownfield.md
tracks/rust/context/: production_rust_design_principles.md
tracks/rust/greenfield/: rust_greenfield.md
