[package]
name = "audio_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
rayon = "1.8"
thiserror = "1.0"
shared_memory = "0.12"
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "buffer_ops"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1